# esp-rs-test

./: Cargo.toml  README.md  cfg.toml.example  partition-table.csv  sdkconfig.defaults
.cargo/: config.toml
src/: http.rs  main.rs  wifi.rs
ui/: main.slint
