[package]
name = "hello-world-rs"
version = "0.1.0"
authors = ["Shantanu Goel <shantanu.goel@gmail.com>"]
edition = "2021"
resolver = "2"

[[bin]]
name = "hello-world-rs"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
slint = { version = "1.11", default-features = false, features = ["compat-1-2", "unsafe-single-threaded", "libm", "renderer-software"] }
gt911 = "0.3"
toml-cfg = "0.2.0"

[build-dependencies]
embuild = "0.33"
slint-build = { version = "1.11", features=["sdf-fonts"] }

[[package.metadata.esp-idf-sys.extra_components]]
bindings_header = "bindings.h"